Apply copilot suggestions
Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>