@@ -8,6 +8,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Supplier;
 
@@ -49,6 +50,8 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
     // request path to template path
     private final Map<String, Supplier<? extends Page>> pages;
     private final Map<String, Page> extractedPaths;
+    // Cache for rendered page content
+    private final Map<String, String> cached;
 
     private final Event<SecurityIdentity> securityIdentityEvent;
     private final CurrentIdentityAssociation currentIdentity;
@@ -57,7 +60,7 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
     private final LazyValue<TemplateProducer> templateProducer;
     private final LazyValue<Site> site;
 
-    public RoqRouteHandler(String rootPath, VertxHttpBuildTimeConfig httpBuildTimeConfig,
+    public RoqRouteHandler(VertxHttpBuildTimeConfig httpBuildTimeConfig,
             Map<String, Supplier<? extends Page>> pages,
             RoqSiteConfig config,
             LocalesBuildTimeConfig locales) {
@@ -68,6 +71,7 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         this.config = config;
         this.locales = locales;
         this.extractedPaths = new ConcurrentHashMap<>();
+        this.cached = new ConcurrentHashMap<>();
         ArcContainer container = Arc.container();
         this.securityIdentityEvent = container.beanManager().getEvent().select(SecurityIdentity.class);
         this.currentVertxRequest = container.instance(CurrentVertxRequest.class).get();
@@ -77,6 +81,32 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         this.templateProducer = new LazyValue<>(
                 () -> Arc.container().instance(TemplateProducer.class).get());
         this.site = new LazyValue<>(Sites::getSite);
+    }
+
+    public void cacheStartupPages(RoqSiteConfig config) {
+        for (var entry : pages.entrySet()) {
+            Page page = entry.getValue().get();
+            if (page.getCachedWith(config) == RoqSiteConfig.RuntimeCacheMode.STARTUP) {
+                String templateId = page.source().template().generatedQuteTemplateId();
+                Template template = templateProducer.get().getInjectableTemplate(templateId);
+                if (template == null) {
+                    LOG.warnf("Skipping startup cache for page [%s]: template not found", page.id());
+                    continue;
+                }
+                try {
+                    String locale = getLocale(page, null);
+                    String rendered = renderPage(page, template, locale);
+                    if (rendered != null) {
+                        String cacheKey = cacheKey(page, locale);
+                        cached.put(cacheKey, rendered);
+                        LOG.debugf("Cached page at startup: %s", page.id());
+                    }
+                } catch (Exception e) {
+                    Throwable rootCause = rootCause(e);
+                    LOG.errorf(rootCause, "Failed to preload startup cache for page [%s]: %s", page.id(), rootCause.toString());
+                }
+            }
+        }
     }
 
     @Override
@@ -126,7 +156,6 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         if (page != null) {
             final String templateId = page.source().template().generatedQuteTemplateId();
             Template template = templateProducer.get().getInjectableTemplate(templateId);
-            TemplateInstance instance = template.instance();
             String contentType = template.getVariant().isPresent() ? template.getVariant().get().getContentType()
                     : MimeMapping.getMimeTypeForFilename(templateId);
             Charset charset = template.getVariant().isPresent() ? template.getVariant().get().getCharset()
@@ -150,19 +179,38 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
                 }
             }
 
-            instance.data("page", page);
-            instance.data("site", site.get());
-            instance.setAttribute(RoqTemplateAttributes.SITE_URL, site.get().url().absolute());
-            instance.setAttribute(RoqTemplateAttributes.SITE_PATH, site.get().url().relative());
-            instance.setAttribute(RoqTemplateAttributes.PAGE_URL, page.url().absolute());
-            instance.setAttribute(RoqTemplateAttributes.PAGE_PATH, page.url().relative());
-            instance.setAttribute(TemplateInstance.LOCALE, getLocale(page, rc));
-            instance.renderAsync().whenComplete((r, t) -> {
+            // Check cache mode for this page
+            RoqSiteConfig.RuntimeCacheMode cacheMode = page.getCachedWith(config);
+            String locale = getLocale(page, rc);
+            String cacheKey = cacheKey(page, locale);
+
+            // Try to get from cache if caching is enabled
+            if (cacheMode != RoqSiteConfig.RuntimeCacheMode.FALSE) {
+                String cachedContent = cached.get(cacheKey);
+                if (cachedContent != null) {
+                    LOG.debugf("Serving cached content for page: %s", page.id());
+                    rc.response().putHeader("X-Roq-Cache-Mode", cacheMode.value());
+                    rc.response().putHeader("X-Roq-Cache-Hit", "true");
+                    rc.response().setStatusCode(200).end(cachedContent);
+                    return;
+                }
+            }
+
+            // Render the template
+            renderPageAsync(page, template, locale).whenComplete((r, t) -> {
                 if (t != null) {
                     Throwable rootCause = rootCause(t);
                     LOG.errorf("Error occurred while rendering the template [%s]: %s", page.id(), rootCause.toString());
                     rc.fail(rootCause);
                 } else {
+                    // Cache the rendered content for any cacheable mode
+                    if (cacheMode != RoqSiteConfig.RuntimeCacheMode.FALSE) {
+                        LOG.debugf("Caching rendered content for page: %s", page.id());
+                        cached.put(cacheKey, r);
+                    }
+                    // Add cache mode header for all responses
+                    rc.response().putHeader("X-Roq-Cache-Mode", cacheMode.value());
+                    rc.response().putHeader("X-Roq-Cache-Hit", "false");
                     rc.response().setStatusCode(200).end(r);
                 }
             });
@@ -170,6 +218,28 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
             LOG.debugf("Template page not found: %s", rc.request().path());
             rc.next();
         }
+    }
+
+    private CompletionStage<String> renderPageAsync(Page page, Template template, String locale) {
+        return configureTemplateInstance(page, template, locale).renderAsync();
+    }
+
+    private String renderPage(Page page, Template template, String locale) {
+        return configureTemplateInstance(page, template, locale).render();
+    }
+
+    private TemplateInstance configureTemplateInstance(Page page, Template template, String locale) {
+        TemplateInstance instance = template.instance();
+        instance.data("page", page);
+        instance.data("site", site.get());
+        instance.setAttribute(RoqTemplateAttributes.SITE_URL, site.get().url().absolute());
+        instance.setAttribute(RoqTemplateAttributes.SITE_PATH, site.get().url().relative());
+        instance.setAttribute(RoqTemplateAttributes.PAGE_URL, page.url().absolute());
+        instance.setAttribute(RoqTemplateAttributes.PAGE_PATH, page.url().relative());
+        if (locale != null && !locale.isBlank()) {
+            instance.setAttribute(TemplateInstance.LOCALE, locale);
+        }
+        return instance;
     }
 
     private Throwable rootCause(Throwable t) {
@@ -196,13 +266,20 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         if (pageLocale != null) {
             return pageLocale.toString();
         }
-        if (!rc.acceptableLanguages().isEmpty()) {
-            return rc.acceptableLanguages().get(0).tag();
+        if (rc != null && !rc.acceptableLanguages().isEmpty()) {
+            return rc.acceptableLanguages().getFirst().tag();
         }
         if (config.defaultLocale() != null) {
             return config.defaultLocale();
         }
-        return locales.defaultLocale().map(Locale::getDisplayLanguage).orElse(null);
+        return locales.defaultLocale().map(Locale::toLanguageTag).orElse(null);
+    }
+
+    private String cacheKey(Page page, String locale) {
+        if (locale == null || locale.isBlank()) {
+            return page.id();
+        }
+        return page.id() + "::" + locale;
     }
 
 }
